<resources>
    <string name="app_name">CalculoResistencias</string>
    <string name="negro">Negro</string>
    <string name="cafe">Café</string>
    <string name="rojo">Rojo</string>
    <string name="naranja">Naranja</string>
    <string name="amarillo">Amarillo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="violeta">Violeta</string>
    <string name="gris">Gris</string>
    <string name="blanco">Blanco</string>
</resources>
