<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juandaqugo.calculoresistencias.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/resistenciaelectrica"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/negro"
                android:id="@+id/rnegro1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/cafe"
                android:id="@+id/rcafe1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/rojo"
                android:id="@+id/rrojo1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/naranja"
                android:id="@+id/rnaranja1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/amarillo"
                android:id="@+id/ramarillo1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/verde"
                android:id="@+id/rverde1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/azul"
                android:id="@+id/razul1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/violeta"
                android:id="@+id/rvioleta1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/gris"
                android:id="@+id/rgris1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/blanco"
                android:id="@+id/rblanco1"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/negro"
                android:id="@+id/rnegro2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/cafe"
                android:id="@+id/rcafe2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/rojo"
                android:id="@+id/rrojo2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/naranja"
                android:id="@+id/rnaranja2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/amarillo"
                android:id="@+id/ramarillo2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/verde"
                android:id="@+id/rverde2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/azul"
                android:id="@+id/razul2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/violeta"
                android:id="@+id/rvioleta2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/gris"
                android:id="@+id/rgris2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/blanco"
                android:id="@+id/rblanco2"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/negro"
                android:id="@+id/rnegro3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/cafe"
                android:id="@+id/rcafe3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/rojo"
                android:id="@+id/rrojo3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/naranja"
                android:id="@+id/rnaranja3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/amarillo"
                android:id="@+id/ramarillo3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/verde"
                android:id="@+id/rverde3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/azul"
                android:id="@+id/razul3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/violeta"
                android:id="@+id/rvioleta3"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Calcular"
            android:id="@+id/bcalcular"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/tresultado"
            android:textSize="35sp"/>
    </LinearLayout>
</LinearLayout>
